# clipboard-manager

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: App.tsx  main.rs
src-tauri/: Cargo.toml  main.rs  tauri.conf.json
src-tauri/src/: main.rs
ui/: app-window.slint
